# RAG-Starter

./: .gitignore  README.md
apps/rag-server/: .env.example  README.md  pyproject.toml
apps/rag-server/app/: config.py  main.py
apps/rag-server/app/api/routes/: README.md  chat.py  stock.py
apps/rag-server/app/core/: README.md  embeddings.py  rag.py
apps/rag-server/app/services/: README.md  llm.py  news.py  vectordb.py
apps/web/: package.json  pnpm-lock.yaml
apps/web/src/app/: README.md  globals.css  page.tsx
apps/web/src/app/api/stock/analyze/: route.ts
apps/web/src/app/stock/[ticker]/: page.tsx
apps/web/src/components/: AnalysisResult.tsx  MarketBadge.tsx  README.md  SourceList.tsx  StockSearchBar.tsx
